Add blogs from 2017

--- a/index.html
+++ b/index.html
@@ -117,7 +117,20 @@
                     <h2>Projects</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-rocket fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>NextAI</strong>
+                                </h4>
+                                <p>NextAI is a global innovation hub for artificial intelligence related venture creation and technology commercialization.</p>
+                                <a href="http://www.nextcanada.com/next-ai" target="_blank" class="btn btn-light">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -130,7 +143,7 @@
                                 <a href="http://www.greyadv.com/" target="_blank" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -140,10 +153,10 @@
                                     <strong>Marketing Firm</strong>
                                 </h4>
                                 <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook.</p>
-                                <a href="http://www.greyadv.com/" class="btn btn-light">Learn More</a>
+                                <a href="marketing/google-adwords-exam-help" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
