Add blogs from 2017

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <h2>Projects</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-sm-3">
+                        <div class="col-md-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -130,7 +130,7 @@
                                 <a href="http://www.nextcanada.com/next-ai" target="_blank" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-md-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -143,7 +143,9 @@
                                 <a href="http://www.greyadv.com/" target="_blank" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-sm-3">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -156,7 +158,7 @@
                                 <a href="marketing/google-adwords-exam-help" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-md-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -255,7 +257,7 @@
                         </h4>
                         <p>via <a href="https://medium.com/@dudonwai/there-and-back-again-b3facf3fabe0">@dudonwai</a>
                         </p>
-                        <p>It’s official! I’m moving on from Shell to return to Toronto to begin a new chapter of my career and my life. It’s surreal to have grown up in Toronto, moved away for good (or, so I thought at the time), and to come back full-circle to Toronto ...</p>
+                        <p>It’s official! I’m moving on from Shell to return to Toronto to begin a new chapter of my career and my life. It’s surreal to have grown up in Toronto, moved away for good (or, so I thought at the time), and to come back full-circle to Toronto...</p>
                         <a class="btn btn-primary" href="/blog/2017/there-and-back-again">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
