Adding back blog article

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <!-- /.row -->
 
             <!-- Blog Post Row -->
-<!--             <div class="row">
+             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="col-sm-2 text-center">
                         <br>
@@ -262,7 +262,7 @@
                     </div>
                 </div>
             </div>
-            <hr> -->
+            <hr> 
             <!-- /.row -->
 
             <!-- Blog Post Row -->
