Added There and Back Again - Again?

--- a/index.html
+++ b/index.html
@@ -212,6 +212,35 @@
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="col-sm-2 text-center">
                         <br>
+                        <p><i class="fa fa-plane fa-3x"></i>
+                        </p>
+                        <p>May 4, 2017</p>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <br>
+                        <a href="/blog/2017/there-and-back-again-again">
+                            <img class="img-portfolio img-responsive" src="img/there-and-back-again-again.jpg" alt="There And Back Again - Again?">
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4>
+                            <a href="/blog/2017/there-and-back-again-again">There And Back Again - Again?</a>
+                        </h4>
+                        <p>via <a href="https://medium.com/@dudonwai/there-and-back-again-again-86f274594d97">@dudonwai</a>
+                        </p>
+                        <p>Very rarely have I ever said anything worth quoting, but the quote above comes from a candid conversation I had today with a friend about my recent career change. Most conversations I’ve had recently touch on the topic of...</p>
+                        <a class="btn btn-primary" href="/blog/2017/there-and-back-again-again">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-sm-2 text-center">
+                        <br>
                         <p><i class="fa fa-gift fa-3x"></i>
                         </p>
                         <p>Mar 5, 2017</p>
@@ -219,7 +248,7 @@
                     <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2017/the-sacrifices-of-entrepreneurship">
-                            <img class="img-portfolio img-responsive" src="img/the-sacrifices-of-entrepreneurship.jpeg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/the-sacrifices-of-entrepreneurship.jpeg" alt="The Sacrifices of Entrepreneurship">
                         </a>
                     </div>
                     <div class="col-sm-6">
@@ -248,14 +277,14 @@
                     <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2017/there-and-back-again">
-                            <img class="img-portfolio img-responsive" src="img/there-and-back-again.jpeg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/there-and-back-again.jpeg" alt="There and Back Again">
                         </a>
                     </div>
                     <div class="col-sm-6">
                         <h4>
                             <a href="/blog/2017/there-and-back-again">There And Back Again</a>
                         </h4>
-                        <p>via <a href="https://medium.com/@dudonwai/there-and-back-again-b3facf3fabe0">@dudonwai</a>
+                        <p>via <a href="https://medium.com/@dudonwai/there-and-back-again-c339e39bd762">@dudonwai</a>
                         </p>
                         <p>It’s official! I’m moving on from Shell to return to Toronto to begin a new chapter of my career and my life. It’s surreal to have grown up in Toronto, moved away for good (or, so I thought at the time), and to come back full-circle to Toronto...</p>
                         <a class="btn btn-primary" href="/blog/2017/there-and-back-again">Read More <i class="fa fa-angle-right"></i></a>
@@ -277,7 +306,7 @@
                     <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/why-i-experiment-every-day">
-                            <img class="img-portfolio img-responsive" src="img/why-i-experiment-every-day.jpeg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/why-i-experiment-every-day.jpeg" alt="Why I Experiment Everyday">
                         </a>
                     </div>
                     <div class="col-sm-6">
@@ -306,7 +335,7 @@
                     <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/meta-blog-1">
-                            <img class="img-portfolio img-responsive" src="img/meta-blog-1.jpg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/meta-blog-1.jpg" alt="Meta Blog">
                         </a>
                     </div>
                     <div class="col-sm-6">
@@ -335,7 +364,7 @@
                     <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/i-am-a-procrastinator">
-                            <img class="img-portfolio img-responsive" src="img/i-am-a-procrastinator.jpg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/i-am-a-procrastinator.jpg" alt="I Am A Procrastinator">
                         </a>
                     </div>
                     <div class="col-sm-6">
@@ -364,7 +393,7 @@
                     <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/no-marketing-budget">
-                            <img class="img-portfolio img-responsive" src="img/no-marketing-budget.jpg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/no-marketing-budget.jpg" alt="No Marketing Budget">
                         </a>
                     </div>
                     <div class="col-sm-6">
@@ -393,7 +422,7 @@
                     <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/8-reasons-you-need-a-website">
-                            <img class="img-portfolio img-responsive" src="img/8-reasons-you-need-a-website.jpg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/8-reasons-you-need-a-website.jpg" alt="8 Reasons You Need A Website">
                         </a>
                     </div>
                     <div class="col-sm-6">
