Update blogs with alt text for images

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <h4>
                             <a href="/blog/2017/there-and-back-again-again">There And Back Again - Again?</a>
                         </h4>
-                        <p>via <a href="https://medium.com/@dudonwai/there-and-back-again-again-86f274594d97">@dudonwai</a>
+                        <p>via <a href="http://bit.ly/2qBl1GE">@dudonwai</a>
                         </p>
                         <p>Very rarely have I ever said anything worth quoting, but the quote above comes from a candid conversation I had today with a friend about my recent career change. Most conversations I’ve had recently touch on the topic of...</p>
                         <a class="btn btn-primary" href="/blog/2017/there-and-back-again-again">Read More <i class="fa fa-angle-right"></i></a>
