--- a/index.html
+++ b/index.html
@@ -209,6 +209,40 @@
             </div>
 
             <!-- Blog Post Row -->
+            <!-- 
+            Local
+            Local
+            Local
+            Local -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-sm-2 text-center">
+                        <br>
+                        <p><i class="fa fa-quote-left fa-3x"></i>
+                        </p>
+                        <p>August 16, 2017</p>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <br>
+                        <a href="https://medium.com/next-canada/nextfounderchats-dudon-wai-7eba3fbb658f">
+                            <img class="img-portfolio img-responsive" src="img/next-canada-venture-preview-dudon-wai.jpeg" alt="#NEXTFounderChats: Dudon Wai">
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4>
+                            <a href="https://medium.com/next-canada/nextfounderchats-dudon-wai-7eba3fbb658f">#NEXTFounderChats: Dudon Wai</a>
+                        </h4>
+                        <p>via <a href="https://medium.com/@NEXTCanada">@NEXTCanada</a>
+                        </p>
+                        <p>I joined Shell as an engineer during the boom in 2013. It was a period of fast-paced growth where we made decisions based on speed and not necessarily what was best. But then in 2014, the oil price tanked...</p>
+                        <a class="btn btn-primary" href="https://medium.com/next-canada/nextfounderchats-dudon-wai-7eba3fbb658f">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="col-sm-2 text-center">
