--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dudon Wai is an engineer, programmer and marketer. He co-founded GreyADV and stays busy marketing for SMBs and coding for PetroRecruit - all while studying at Georgia Tech for artificial intelligence.">
+    <meta name="description" content="Dudon Wai is an engineer, programmer and marketer. He co-founded GreyADV, PetroRecruit and his latest venture, Unsist, to apply AI to the Energy sector.">
     <meta name="author" content="Dudon Wai">
     <meta name="keywords" content="Dudon Wai DudonWai Personal Website Calgary Toronto Waterloo Entrepreneur Founder">
 
     <meta property="og:site_name" content="Dudon Wai">
     <meta property="og:title" content="Dudon Wai">
-    <meta property="og:description" content="Dudon Wai is an engineer, programmer and marketer. He co-founded GreyADV and stays busy marketing for SMBs and coding for PetroRecruit - all while studying at Georgia Tech for artificial intelligence.">
+    <meta property="og:description" content="Dudon Wai is an engineer, programmer and marketer. He co-founded GreyADV, PetroRecruit and his latest venture, Unsist, to apply AI to the Energy sector.">
     <meta property="og:url" content="http://www.dudonwai.com/">
     <meta property="og:image" content="http://www.dudonwai.com/img/bg.png">
 
