--- a/index.html
+++ b/index.html
@@ -209,11 +209,64 @@
             </div>
 
             <!-- Blog Post Row -->
-            <!-- 
-            Local
-            Local
-            Local
-            Local -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-sm-2 text-center">
+                        <br>
+                        <p><i class="fa fa-microphone fa-3x"></i>
+                        </p>
+                        <p>February 2, 2018</p>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <br>
+                        <a href="/blog/2018/founders-beta-interview">
+                            <img class="img-portfolio img-responsive" src="img/founders-beta-interview.jpg" alt="Founders Beta Interview">
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4>
+                            <a href="img-portfolio img-responsive" src="img/founders-beta-interview.jpg">Founders Beta Interview</a>
+                        </h4>
+                        <p>via <a href="https://www.foundersbeta.com/interview/founder-spotlight-dudon-wai/">@FoundersBeta</a>
+                        </p>
+                        <p>Dudon Wai is one of the founders of Unsist, a data-science startup for the Oil &amp; Gas industry.  In 2014, Dudon graduated from engineering at the University of Waterloo. Dudon had the opportunity to work at...</p>
+                        <a class="btn btn-primary" href="/blog/2018/founders-beta-interview">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-sm-2 text-center">
+                        <br>
+                        <p><i class="fa fa-list-ol fa-3x"></i>
+                        </p>
+                        <p>January 7, 2018</p>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <br>
+                        <a href="/blog/2018/learn-earn-return">
+                            <img class="img-portfolio img-responsive" src="img/learn-earn-return.jpeg" alt="Learn Earn Return">
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4>
+                            <a href="/blog/2018/learn-earn-return">Learn, Earn &amp; Return</a>
+                        </h4>
+                        <p>via <a href="https://medium.com/@dudonwai/learn-earn-return-eedfa37d294f">@dudonwai</a>
+                        </p>
+                        <p>Happy new year, everyone! The period between Christmas and New Year’s is one of my favourites. Every year, that’s when I catch up on self-care and the neglected parts of my life: myself, my friends, and my family...</p>
+                        <a class="btn btn-primary" href="/blog/2018/learn-earn-return">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="col-sm-2 text-center">
@@ -263,7 +316,7 @@
                         </h4>
                         <p>via <a href="http://bit.ly/2qBl1GE">@dudonwai</a>
                         </p>
-                        <p>Very rarely have I ever said anything worth quoting, but the quote above comes from a candid conversation I had today with a friend about my recent career change. Most conversations I’ve had recently touch on the topic of...</p>
+                        <p>I’m writing because I’ve been relatively MIA (missing in action) since I announced I left Shell in February and I want to take this opportunity to give an update on the adventure. I should also mention that I still...</p>
                         <a class="btn btn-primary" href="/blog/2017/there-and-back-again-again">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
