Add new blog: The Journey Continues

--- a/index.html
+++ b/index.html
@@ -213,6 +213,35 @@
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="col-sm-2 text-center">
                         <br>
+                        <p><i class="fa fa-forward fa-3x"></i>
+                        </p>
+                        <p>July 31, 2018</p>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <br>
+                        <a href="/blog/2018/the-journey-continues">
+                            <img class="img-portfolio img-responsive" src="img/unsist-nextai-pitch.JPG" alt="Unsist NextAI Pitch">
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4>
+                            <a href="/blog/2018/the-journey-continues">The Journey Continues</a>
+                        </h4>
+                        <p>via <a href="https://medium.com/@dudonwai/">@dudonwai</a>
+                        </p>
+                        <p>Last June marked 16 months since I started Unsist with my co-founder Roi, and also marks the conclusion and winding down of our incredible journey. Make no mistake, we were successful in...</p>
+                        <a class="btn btn-primary" href="/blog/2018/the-journey-continues">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-sm-2 text-center">
+                        <br>
                         <p><i class="fa fa-microphone fa-3x"></i>
                         </p>
                         <p>February 2, 2018</p>
@@ -225,7 +254,7 @@
                     </div>
                     <div class="col-sm-6">
                         <h4>
-                            <a href="img-portfolio img-responsive" src="img/founders-beta-interview.jpg">Founders Beta Interview</a>
+                            <a href="/blog/2018/founders-beta-interview">Founders Beta Interview</a>
                         </h4>
                         <p>via <a href="https://www.foundersbeta.com/interview/founder-spotlight-dudon-wai/">@FoundersBeta</a>
                         </p>
