Update home page button

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="text-vertical-center">
             <h1>Hi, I'm Dudon</h1>
             <br>
-            <a href="#projects" class="btn btn-dark btn-lg">Check Out My Projects</a>
+            <a href="#about" class="btn btn-dark btn-lg">Check Out My Story</a>
         </div>
     </header>
 
