Complete redesign website

--- a/launch.html
+++ b/launch.html
@@ -110,10 +110,11 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
-                        <img src="img/stock-trading-tools.JPG" alt="Stock Trading Tools" height="150">
+                        <a href="#current">
+                        <img class="img-portfolio img-responsive" src="img/stock-trading-tools.JPG" alt="Stock Trading Tools"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="#current">Stock Trading Tools</a></h4>
@@ -130,10 +131,11 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
-                        <img src="img/workout-app.JPG" alt="Workout App" height="150">
+                        <a href="#current">
+                        <img class="img-portfolio img-responsive" src="img/workout-app.JPG" alt="Workout App"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="#current">Workout App</a></h4>
@@ -164,11 +166,11 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
                         <a href="http://www.unsist.com">
-                        <img src="img/next-ai-venture-day.JPG" alt="Unsist" height="150"></a>
+                        <img class="img-portfolio img-responsive" src="img/next-ai-venture-day.JPG" alt="Unsist"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="http://www.unsist.com">Unsist</a></h4>
@@ -182,11 +184,11 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
                         <a href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4">
-                        <img src="img/gt-omscs-cs7641-a4.jpg" alt="PetroRecruit" height="150"></a>
+                        <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a4.jpg" alt="PetroRecruit"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4">Reinforcement Learning</a></h4>
@@ -201,11 +203,11 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
                         <a href="docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3">
-                        <img src="img/gt-omscs-cs7641-a3.jpg" alt="Unsupervised Learning" height="150"></a>
+                        <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a3.jpg" alt="Unsupervised Learning"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3">Unsupervised Learning</a></h4>
@@ -220,11 +222,11 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
                         <a href="docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2">
-                        <img src="img/gt-omscs-cs7641-a2.jpg" alt="Random Optimization" height="150"></a>
+                        <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a2.jpg" alt="Random Optimization"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2">Random Optimization</a></h4>
@@ -240,11 +242,11 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
                         <a href="docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1">
-                        <img src="img/gt-omscs-cs7641-a1.jpg" alt="Supervised Learning" height="150"></a>
+                        <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a1.jpg" alt="Supervised Learning"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1">Supervised Learning</a></h4>
@@ -258,11 +260,11 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
                         <a href="http://www.petrorecruit.com">
-                        <img src="img/petrorecruit.JPG" alt="PetroRecruit" height="150"></a>
+                        <img class="img-portfolio img-responsive" src="img/petrorecruit.JPG" alt="PetroRecruit"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="http://www.petrorecruit.com">PetroRecruit</a></h4>
@@ -276,11 +278,11 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
                         <a href="http://www.greyadv.com">
-                        <img src="img/greyadv.JPG" alt="GreyADV" height="150"></a>
+                        <img class="img-portfolio img-responsive" src="img/greyadv.JPG" alt="GreyADV"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="http://www.greyadv.com">GreyADV</a></h4>
