--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Dudon Wai">
     <meta property="og:description" content="Dudon Wai is an engineer, programmer and marketer. His passion for energy and technology led him to co-found Unsist after previously starting PetroRecruit and GreyADV">
     <meta property="og:url" content="http://www.dudonwai.com/">
-    <meta property="og:image" content="http://www.dudonwai.com/img/bg.png">
+    <meta property="og:image" content="http://www.dudonwai.com/img/unsist-nextai-pitch.JPG">
 
     <title>Dudon Wai | Startups, Product, Personal Growth</title>
 
