--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="author" content="Dudon Wai">
     <meta name="keywords" content="Dudon Wai DudonWai Personal Website Calgary Toronto Waterloo Unsist">
 
-    <meta property="og:site_name" content="Dudon Wai">
-    <meta property="og:title" content="Dudon Wai">
-    <meta property="og:description" content="Dudon Wai is an engineer, programmer and marketer. His passion for energy and technology led him to co-found Unsist after previously starting PetroRecruit and GreyADV">
-    <meta property="og:url" content="http://www.dudonwai.com/">
-    <meta property="og:image" content="http://www.dudonwai.com/img/unsist-nextai-pitch.JPG">
+    <meta property="og:site_name" content="Dudon Wai" />
+    <meta property="og:title" content="Dudon Wai" />
+    <meta property="og:description" content="Dudon Wai is an engineer, programmer and marketer. His passion for energy and technology led him to co-found Unsist after previously starting PetroRecruit and GreyADV" />
+    <meta property="og:url" content="http://www.dudonwai.com/" />
+    <meta property="og:image" content="http://www.dudonwai.com/img/unsist-nextai-pitch.JPG" />
 
     <title>Dudon Wai | Startups, Product, Personal Growth</title>
 
