--- a/404.html
+++ b/404.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dudon Wai is an engineer, programmer and marketer. His passion for energy and technology led him to co-found Unsist after previously starting PetroRecruit and GreyADV">
+    <meta name="description" content="Dudon Wai has started several software companies including Unsist, and loves connecting people with products. He has built cars, drilled oil wells and now helps software companies scale.">
     <meta name="author" content="Dudon Wai">
-    <meta name="keywords" content="Dudon Wai DudonWai Personal Website Calgary Toronto Waterloo Unsist">
+    <meta name="keywords" content="Dudon Wai DudonWai Startup Calgary Toronto Unsist Artificial Intelligence">
 
-    <meta property="og:site_name" content="Dudon Wai">
-    <meta property="og:title" content="Dudon Wai">
-    <meta property="og:description" content="Dudon Wai is an engineer, programmer and marketer. His passion for energy and technology led him to co-found Unsist after previously starting PetroRecruit and GreyADV">
-    <meta property="og:url" content="http://www.dudonwai.com/">
-    <meta property="og:image" content="http://www.dudonwai.com/img/bg.png">
+    <meta property="og:site_name" content="Dudon Wai" />
+    <meta property="og:title" content="Dudon Wai" />
+    <meta property="og:description" content="Dudon Wai has started several software companies including Unsist, and loves connecting people with products. He has built cars, drilled oil wells and now helps software companies scale." />
+    <meta property="og:url" content="http://www.dudonwai.com/" />
+    <meta property="og:image" content="http://www.dudonwai.com/img/unsist-nextai-pitch.JPG" />
 
     <title>Dudon Wai | 404 - Not Found</title>
 
@@ -37,6 +37,15 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-85617324-1', 'auto');
+          ga('send', 'pageview');
+    </script>
 
 </head>
 
