--- a/marketing/google-adwords-exam-help.html
+++ b/marketing/google-adwords-exam-help.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The Google Adwords certificate demonstrates you know how to advertise on Google. All you need is some practice and to pass the exam. Feel free to study from these sample test questions - with answers.">
+    <meta name="description" content="Dudon Wai has started several software companies including Unsist, and loves connecting people with products. He has built cars, drilled oil wells and now helps software companies scale.">
     <meta name="author" content="Dudon Wai">
-    <meta name="keywords" content="Dudon Wai DudonWai Google Adwords Exam Question Answer SEO SEM Marketing">
+    <meta name="keywords" content="Dudon Wai DudonWai Startup Calgary Toronto Unsist Artificial Intelligence">
 
-    <meta property="og:site_name" content="Dudon Wai">
-    <meta property="og:title" content="Google AdWords Exam Help">
-    <meta property="og:description" content="The Google Adwords certificate demonstrates you know how to advertise on Google. All you need is some practice and to pass the exam. Feel free to study from these sample test questions - with answers.">
-    <meta property="og:url" content="http://www.dudonwai.com/google-adwords-exam-help">
-    <meta property="og:image" content="http://www.dudonwai.com/img/google-adwords-logo.jpg">
+    <meta property="og:site_name" content="Dudon Wai" />
+    <meta property="og:title" content="Dudon Wai" />
+    <meta property="og:description" content="Dudon Wai has started several software companies including Unsist, and loves connecting people with products. He has built cars, drilled oil wells and now helps software companies scale." />
+    <meta property="og:url" content="http://www.dudonwai.com/" />
+    <meta property="og:image" content="http://www.dudonwai.com/img/unsist-nextai-pitch.JPG" />
 
     <title>Dudon Wai | Google AdWords Exam Help</title>
 
