--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <div class="col-sm-12">        
                             <p><img src="img/next-ai-venture-day.JPG" alt="NextAI" width="100%"></p>
                         </div>
-                        <p>Now I <b class="text-primary">build software</b> startups</p>
+                        <p>Now I <b class="text-primary">grow software</b> startups</p>
                     </div>                                                              
                 </div>
             </div>
